--- a/AFCU/AFCU.csproj
+++ b/AFCU/AFCU.csproj
@@ -14,15 +14,51 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+    <PackageReference Include="bootstrap" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
-    <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+    <None Remove="ClientApp\src\app\models\User.ts" />
+    <None Remove="ClientApp\src\app\models\index.ts" />
+    <None Remove="ClientApp\src\app\services\index.ts" />
+    <None Remove="ClientApp\src\app\resolves\CurrentUserResolve.ts" />
+    <None Remove="ClientApp\src\app\resolves\index.ts" />
+    <None Remove="ClientApp\src\app\models\user %28copy%29.ts" />
+    <None Remove="ClientApp\src\styles.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ClientApp\src\app\models\" />
+    <Folder Include="ClientApp\src\app\services\" />
+    <Folder Include="ClientApp\src\app\resolves\" />
+    <Folder Include="ClientApp\src\assets\fonts\" />
+    <Folder Include="ClientApp\src\assets\fonts\Black\" />
+    <Folder Include="ClientApp\src\assets\fonts\Bold\" />
+    <Folder Include="ClientApp\src\assets\fonts\Hairline\" />
+    <Folder Include="ClientApp\src\assets\fonts\Light\" />
+    <Folder Include="ClientApp\src\assets\fonts\Regular\" />
+    <Folder Include="ClientApp\src\assets\scss\" />
+    <Folder Include="ClientApp\src\assets\scss\modules\" />
+    <Folder Include="ClientApp\src\assets\images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\models\user.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\index.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\index.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\resolves\current-user-resolve.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\new-user.ts" />
+  </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
